@@ -10,53 +10,58 @@
   <description>A test project to investigate Spring security.</description>
 
   <prerequisites>
-    <maven>3.0.1</maven>
+    <maven>3.6</maven>
   </prerequisites>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <cobertura.version>2.7</cobertura.version>
-    <pmd.version>3.6</pmd.version>
-    <checkstyle.version>2.17</checkstyle.version>
-    <spring.version>4.2.4.RELEASE</spring.version>
-    <spring-security-version>3.2.5.RELEASE</spring-security-version>
+    <pmd.version>3.9.0</pmd.version>
+    <checkstyle.version>3.0.0</checkstyle.version>
+    <spring.version>5.1.1.RELEASE</spring.version>
+    <spring-security-version>5.1.1.RELEASE</spring-security-version>
+    <hibernate.version>5.3.1.Final</hibernate.version>
+    <hsqldb.version>2.4.1</hsqldb.version>
+    <selenium.version>3.14.0</selenium.version>
     <cucumber.version>1.2.5</cucumber.version>
-    <selenium.version>3.4.0</selenium.version>
-    <surefire.version>2.20</surefire.version>
-    <hibernate.version>5.1.0.Final</hibernate.version>
+    <surefire.version>2.22.1</surefire.version>
     <junit.version>4.12</junit.version>
-    <hsqldb.version>2.3.3</hsqldb.version>
-    <jetty.version>9.3.14.v20161028</jetty.version>
-    <maven.version>3.5</maven.version>
-    <java.target>1.8</java.target>
+    <jetty.version>9.4.11.v20180605</jetty.version>
+    <maven.version>3.5.2</maven.version>
+    <mavencompiler.version>3.8.0</mavencompiler.version>
+    <java.target>1.11</java.target>
+    <javadoc.version>3.0.0</javadoc.version>
+    <jaxb.version>2.3.0</jaxb.version>
   </properties>
 
   <build>
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
+        <version>${mavencompiler.version}</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <testSource>1.8</testSource>
-          <testTarget>1.8</testTarget>
+          <release>10</release>
         </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.17</version>
-        <configuration>
-          <argLine>-XX:-UseSplitVerifier</argLine>
-        </configuration>
+        <version>${surefire.version}</version>
+            <configuration>
+              <jvm>C:\java\jdk-11.0.1\bin\java</jvm>
+              <argLine>--add-modules java.xml.bind</argLine>
+              <forkCount>0</forkCount>
+<!--               <argLine>-XX:-UseSplitVerifier</argLine> -->
+            </configuration>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.17</version>
+        <version>${surefire.version}</version>
         <configuration>
         </configuration>
         <executions>
@@ -68,26 +73,27 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>9.2.1.v20140609</version>
+        <version>${jetty.version}</version>
         <configuration>
           <httpConnector>
-            <port>7073</port>
+            <port>7097</port>
             <idleTimeout>60000</idleTimeout>
           </httpConnector>
           <scanIntervalSeconds>0</scanIntervalSeconds>
           <contextPath>/</contextPath>
           <stopKey>foo</stopKey>
-          <stopPort>9994</stopPort>
+          <stopPort>9999</stopPort>
         </configuration>
         <executions>
           <execution>
             <id>start-jetty</id>
             <phase>pre-integration-test</phase>
             <goals>
-              <goal>run</goal>
+              <goal>start</goal>
             </goals>
             <configuration>
               <scanIntervalSeconds>0</scanIntervalSeconds>
@@ -103,12 +109,13 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-pmd-plugin</artifactId>
         <version>${pmd.version}</version>
         <configuration>
-          <targetJdk>1.7</targetJdk>
+          <targetJdk>1.8</targetJdk>
         </configuration>
         <executions>
           <execution>
@@ -120,6 +127,7 @@
           </execution>
         </executions>
       </plugin>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
@@ -142,56 +150,6 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>${cobertura.version}</version>
-        <dependencies>  
-          <dependency>  
-            <groupId>org.ow2.asm</groupId>  
-            <artifactId>asm</artifactId>  
-            <version>5.0.3</version>  
-          </dependency>  
-        </dependencies>  
-        <configuration>
-          <instrumentation>
-            <ignores>
-              <ignore>com.blizzardtec.app.controller.*</ignore>
-            </ignores>
-            <excludes>
-              <exclude>com/blizzardtec/app/controller/**/*.class</exclude>
-              <exclude>com/blizzardtec/app/startup/**/Startup.class</exclude>
-              <exclude>com/blizzardtec/app/form/**/*.class</exclude>
-              <exclude>com/blizzardtec/app/**/*Exception.class</exclude>
-            </excludes>
-          </instrumentation>
-          <check>
-            <haltOnFailure>false</haltOnFailure>
-            <branchRate>50</branchRate>
-            <lineRate>50</lineRate>
-            <totalBranchRate>50</totalBranchRate>
-            <totalLineRate>50</totalLineRate>
-            <packageLineRate>50</packageLineRate>
-            <packageBranchRate>50</packageBranchRate>
-          </check>
-        </configuration>
-        <executions>
-          <execution>
-            <id>clean</id>
-            <phase>clean</phase>
-            <goals>
-              <goal>clean</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>package</id>
-            <phase>package</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
 
@@ -200,7 +158,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.7</version>
+        <version>2.9</version>
         <reportSets>
           <reportSet>
             <reports>
@@ -248,22 +206,10 @@
         </configuration>
       </plugin>
 
-<!--       <plugin> -->
-<!--         <groupId>org.codehaus.mojo</groupId> -->
-<!--         <artifactId>cobertura-maven-plugin</artifactId> -->
-<!--         <version>${cobertura.version}</version> -->
-<!--         <configuration> -->
-<!--           <formats> -->
-<!--             <format>html</format> -->
-<!--             <format>xml</format> -->
-<!--           </formats> -->
-<!--         </configuration> -->
-<!--       </plugin> -->
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.9.1</version>
+        <version>${javadoc.version}</version>
         <configuration>
         </configuration>
       </plugin>
@@ -345,7 +291,7 @@
     <dependency>
       <groupId>org.hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>2.3.2</version>
+      <version>${hsqldb.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.tiles</groupId>
@@ -401,6 +347,26 @@
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>${jaxb.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>${jaxb.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>${jaxb.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+      <version>1.1.1</version>
     </dependency>
   </dependencies>
 </project>
